--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+  # flutter_localizations:
+  #   sdk: flutter
   flutter_paystack:
      git:
        url: https://github.com/thirstyde/flutter_paystack_rahul.git
@@ -41,7 +41,7 @@ dependencies:
   auto_size_text: ^3.0.0
   barcode_widget: ^2.0.3
   cached_network_image: ^3.2.3
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   change_app_package_name: ^1.1.0
   cloud_firestore: ^4.3.0
   connectivity_plus: ^5.0.2
