--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.eHealth.doctor "
+    namespace "com.eHealth.doctor"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -42,11 +42,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.eHealth.doctor "
+        applicationId "com.eHealth.doctor"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 26
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -72,8 +72,7 @@ dependencies {
   // Import the Firebase BoM
   implementation platform('com.google.firebase:firebase-bom:30.2.0')
 
-  // Add the dependency for the Firebase SDK for Google Analytics
-  // When using the BoM, don't specify versions in Firebase dependencies
+
   implementation 'com.google.firebase:firebase-analytics'
 
   // Add the dependencies for any other desired Firebase products
